layout issues fixed in user profile page

--- a/public/main.css
+++ b/public/main.css
@@ -52,7 +52,8 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    text-align:center;
+    max-width: 300px;
+    /* text-align:center; */
   }
   
  .switch {
